fix(ui5-toolbar): private prop for overflow items added, yet not working

--- a/packages/main/src/themes/ToolbarSelect.css
+++ b/packages/main/src/themes/ToolbarSelect.css
@@ -2,6 +2,6 @@
     width: 100%;
 }
 
-:host [ui5-select] {
+.ui5-tb-popover-item {
     width: inherit;
 }
